# medbridge-health-coach

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  railway.toml
.claude/: settings.json
.claude/agents/: reviewer.md  verifier.md
.claude/plans/: FINAL_CONSOLIDATED_RESEARCH.md  RESEARCH_INDEX.md  future-enhancements.md  plan.md  prd.md  research-cicd.md  research-domain-model.md  research-fastapi-sqlalchemy.md  research-full-summary.md  research-injectedstate-tool-mutation.md  research-railway-deployment.md  research-safety-llm.md  research-scheduling-gaps.md  research-scheduling-observability.md  research-summary-for-milestone-review.md  research-testing-setup.md  research-validation-graph-topology-and-scheduling.md  research.md
.claude/rules/: conventions.md  immutable.md  stack.md
.github/workflows/: ci.yml  deploy.yml  eval.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_patient_display_name.py  d325a08b4b9d_initial_schema.py
architecture/: diagram.d2
demo-ui/: index.html  package-lock.json  package.json  vite.config.ts
demo-ui/public/: site.webmanifest
demo-ui/src/: App.tsx  api.ts  index.css  types.ts
docs/: architecture.dot  decisions.md  intended-use.md  openapi.json  phi-data-flow.md  product-overview.md  release-runbook.md  requirements.md
src/health_ally/: __init__.py  __main__.py  main.py  settings.py
src/health_coach/: __init__.py  __main__.py  main.py  settings.py
tests/: conftest.py
tests/contract/: __init__.py  test_webhook_contracts.py
tests/evals/: __init__.py  conftest.py  test_coaching_quality.py  test_goal_extraction.py  test_safety_evals.py
tests/integration/: test_backoff_dormant.py  test_chat_endpoint.py  test_followup_lifecycle.py  test_graph_routing.py  test_graph_thread.py  test_locking.py  test_onboarding_flow.py  test_webhook_endpoint.py
(+177 files in other folders)
