[project]
name = "health-ally"
version = "0.1.0"
description = "AI-powered exercise accountability partner"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.0",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-anthropic>=1.3.4",
    "langchain-openai>=1.1.11",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.48,<2.1",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "stamina>=25.0",
    "tzdata>=2024.1",
    "aiosqlite>=0.20",
    "langchain>=0.3",
    "langfuse>=3.0,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.8",
    "deepeval>=1.0",
    "respx>=0.21",
    "time-machine>=2.0",
    "hypothesis>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health_ally"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: marks tests requiring PostgreSQL",
]
# Exclude evals from default test run — they require LLM API keys
addopts = "--ignore=tests/evals"

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RET", "RUF", "N", "ANN", "ASYNC", "S", "PTH", "TC"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "S106"]
"src/health_ally/persistence/models.py" = ["TC003", "RUF012"]
"src/health_ally/persistence/schemas/*.py" = ["TC003"]

[tool.ruff.lint.isort]
known-first-party = ["health_ally"]
